feat: enhance knowledge base file processing (#484)

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "جارٍ تحميل الصفحة الإنترنت...",
   "Loading...": "جاري التحميل...",
   "Local (stdio)": "محلي (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "فشلت معالجة الملفات المحلية. يمكنك ترقية خطتك لاستخدام قدرات Chatbox AI المتقدمة لمعالجة الملفات.",
   "Local Mode": "وضع محلي",
   "Log in to your Chatbox account": "تسجيل الدخول إلى حسابك في Chatbox",
   "Log out": "تسجيل الخروج",
@@ -454,6 +455,7 @@
   "No content available": "لا يتوفر محتوى",
   "No documents yet": "لا توجد مستندات بعد",
   "No eligible models available": "لا توجد نماذج مؤهلة متاحة",
+  "No Expansion Pack": "لا توجد حزمة توسعة",
   "No expiration": "بدون انتهاء",
   "No favorite models": "لا توجد نماذج مفضلة",
   "No files were dropped": "لم يتم إفلات أي ملفات",
@@ -719,6 +721,7 @@
   "Unsupported file type: {{fileName}}": "نوع الملف غير مدعوم: {{fileName}}",
   "Untitled": "بلا عنوان",
   "Update Available": "تحديث متاح",
+  "Upgrade": "ترقية",
   "Upload failed: {{error}}": "فشل التحميل: {{error}}",
   "Upload Image": "تحميل الصورة",
   "Upload your first document to get started": "ارفع مستندك الأول للبدء",
@@ -768,6 +771,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "لديك إعدادات غير محفوظة. هل أنت متأكد من أنك تريد المغادرة؟",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "تشمل عقد ChatboxAI الذكاء الاصطناعي على نماذج من مختلف المزودين. لا يلزمك تغيير المزود - يمكنك اختيار نماذج مختلفة بشكل مباشر داخل ChatboxAI. التبديل من ChatboxAI إلى مزود آخر سيتطلب مفتاح API الخاص به. <button>Back to ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "الترخيص الحالي الخاص بك (Chatbox AI Lite) لا يدعم نموذج {{model}}. لاستخدام هذا النموذج، يرجى <OpenMorePlanButton>الترقية</OpenMorePlanButton> إلى Chatbox AI Pro أو حزمة أعلى. بدلاً من ذلك، يمكنك التبديل إلى نموذج مختلف عن طريق <OpenSettingButton>الوصول إلى الإعدادات</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "خطتك الحالية لا تدعم معالجة الملفات المتقدمة. قم بترقية الخطة للحصول على إمكانيات معالجة ملفات محسّنة.",
   "Your HTML content has been published. You can access it via the link below.": "تم نشر محتوى HTML الخاص بك. يمكنك الوصول إليه عبر الرابط أدناه.",
   "Your license has expired.": "لقد انتهت صلاحية ترخيصك.",
   "Your license has expired. Please check your subscription or purchase a new one.": "انتهت صلاحية ترخيصك. يرجى التحقق من اشتراكك أو شراء ترخيص جديد.",
