--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -326,6 +326,7 @@
   "Loading webpage...": "Loading webpage...",
   "Loading...": "Loading...",
   "Local (stdio)": "Local (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.",
   "Local Mode": "Local Mode",
   "Log in to your Chatbox account": "Log in to your Chatbox account",
   "Log out": "Log out",
@@ -389,6 +390,7 @@
   "No content available": "No content available",
   "No documents yet": "No documents yet",
   "No eligible models available": "No eligible models available",
+  "No Expansion Pack": "No Expansion Pack",
   "No expiration": "No expiration",
   "No favorite models": "No favorite models",
   "No files were dropped": "No files were dropped",
@@ -612,6 +614,7 @@
   "unstar": "unstar",
   "Unsupported file type: {{fileName}}": "Unsupported file type: {{fileName}}",
   "Update Available": "Update Available",
+  "Upgrade": "Upgrade",
   "Upload failed: {{error}}": "Upload failed: {{error}}",
   "Upload Image": "Upload Image",
   "Upload your first document to get started": "Upload your first document to get started",
@@ -646,6 +649,7 @@
   "What can I help you with today?": "What can I help you with today?",
   "You have multiple licenses. Please select one to use:": "You have multiple licenses. Please select one to use:",
   "You have no more Chatbox AI quota left this month.": "You have no more Chatbox AI quota left this month.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.",
   "Your HTML content has been published. You can access it via the link below.": "Your HTML content has been published. You can access it via the link below.",
   "Your license has expired.": "Your license has expired.",
   "Your rating on the App Store would help make Chatbox even better!": "Your rating on the App Store would help make Chatbox even better!"
