--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Cargando página web...",
   "Loading...": "Cargando...",
   "Local (stdio)": "Local (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Error en el procesamiento de archivos locales. Puedes actualizar tu plan para usar las capacidades avanzadas de procesamiento de archivos de Chatbox AI.",
   "Local Mode": "Modo local",
   "Log in to your Chatbox account": "Iniciar sesión en tu cuenta de Chatbox",
   "Log out": "Cerrar sesión",
@@ -454,6 +455,7 @@
   "No content available": "No hay contenido disponible",
   "No documents yet": "No hay documentos aún",
   "No eligible models available": "No hay modelos elegibles disponibles",
+  "No Expansion Pack": "No Paquete de expansión",
   "No expiration": "Sin vencimiento",
   "No favorite models": "No hay modelos favoritos",
   "No files were dropped": "No se soltaron archivos",
@@ -719,6 +721,7 @@
   "Unsupported file type: {{fileName}}": "Tipo de archivo no compatible: {{fileName}}",
   "Untitled": "Sin título",
   "Update Available": "Actualización disponible",
+  "Upgrade": "Actualizar",
   "Upload failed: {{error}}": "Error al cargar: {{error}}",
   "Upload Image": "Subir imagen",
   "Upload your first document to get started": "Carga tu primer documento para empezar",
@@ -768,6 +771,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Tiene ajustes no guardados. ¿Está seguro de que desea salir?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Su suscripción ChatboxAI ya incluye acceso a modelos de varios proveedores. No es necesario cambiar de proveedor - puede seleccionar diferentes modelos directamente dentro de ChatboxAI. Cambiar de ChatboxAI a otros proveedores requerirá sus respectivas API keys. <button>Volver a ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "Su licencia actual (Chatbox AI Lite) no es compatible con el modelo {{model}}. Para usar este modelo, por favor <OpenMorePlanButton>actualice</OpenMorePlanButton> a Chatbox AI Pro o un paquete de nivel superior. Alternativamente, puede cambiar a un modelo diferente <OpenSettingButton>accediendo a la configuración</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Tu plan actual no es compatible con el procesamiento avanzado de archivos. Actualiza el plan para obtener capacidades mejoradas de procesamiento de archivos.",
   "Your HTML content has been published. You can access it via the link below.": "Su contenido HTML ha sido publicado. Puede acceder a él mediante el siguiente enlace.",
   "Your license has expired.": "Su licencia ha caducado.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Su licencia ha expirado. Por favor, verifique su suscripción o adquiera una nueva.",
