--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Chargement de la page web...",
   "Loading...": "Chargement...",
   "Local (stdio)": "Local (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Échec du traitement du fichier local. Vous pouvez mettre à niveau votre forfait pour utiliser les capacités avancées de traitement de fichiers de Chatbox AI.",
   "Local Mode": "Mode Local",
   "Log in to your Chatbox account": "Connectez-vous à votre compte Chatbox",
   "Log out": "Déconnexion",
@@ -454,6 +455,7 @@
   "No content available": "Aucun contenu disponible",
   "No documents yet": "Aucun document pour l'instant",
   "No eligible models available": "Aucun modèle éligible disponible",
+  "No Expansion Pack": "Aucun pack d'extension",
   "No expiration": "Sans expiration",
   "No favorite models": "Aucun modèle favori",
   "No files were dropped": "Aucun fichier n'a été déposé",
@@ -720,6 +722,7 @@
   "Unsupported file type: {{fileName}}": "Type de fichier non pris en charge : {{fileName}}",
   "Untitled": "Sans titre",
   "Update Available": "Mise à jour disponible",
+  "Upgrade": "Mettre à niveau",
   "Upload failed: {{error}}": "Échec de l'envoi : {{error}}",
   "Upload Image": "Télécharger une image",
   "Upload your first document to get started": "Téléchargez votre premier document pour commencer",
@@ -769,6 +772,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Vous avez des paramètres non enregistrés. Êtes-vous sûr de vouloir quitter?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Votre abonnement ChatboxAI inclut déjà accès à des modèles de différents fournisseurs. Il n'est pas nécessaire de changer de fournisseur - vous pouvez sélectionner différents modèles directement dans ChatboxAI. Passer de ChatboxAI à d'autres fournisseurs nécessitera leurs API keys respectifs. <button>Retour à ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "Votre licence actuelle (Chatbox AI Lite) ne prend pas en charge le modèle {{model}}. Pour utiliser ce modèle, veuillez <OpenMorePlanButton>mettre à niveau</OpenMorePlanButton> vers Chatbox AI Pro ou un forfait de niveau supérieur. Vous pouvez également passer à un autre modèle en <OpenSettingButton>accédant aux paramètres</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Votre forfait actuel ne prend pas en charge le traitement avancé des fichiers. Mettez à niveau votre forfait pour bénéficier de fonctionnalités de traitement de fichiers améliorées.",
   "Your HTML content has been published. You can access it via the link below.": "Votre contenu HTML a été publié. Vous pouvez y accéder via le lien ci-dessous.",
   "Your license has expired.": "Votre licence a expiré.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Votre licence a expiré. Veuillez vérifier votre abonnement ou en acheter un nouveau.",
