--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -383,6 +383,7 @@
   "Loading webpage...": "Caricamento pagina web...",
   "Loading...": "Caricamento...",
   "Local (stdio)": "Locale (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Elaborazione del file locale non riuscita. Puoi aggiornare il tuo piano per utilizzare le funzionalità avanzate di elaborazione file di Chatbox AI.",
   "Local Mode": "Modalità locale",
   "Log in to your Chatbox account": "Accedi al tuo account Chatbox",
   "Log out": "Disconnetti",
@@ -453,6 +454,7 @@
   "No content available": "Nessun contenuto disponibile",
   "No documents yet": "Nessun documento ancora",
   "No eligible models available": "Nessun modello idoneo disponibile",
+  "No Expansion Pack": "Nessun pacchetto di espansione",
   "No expiration": "Nessuna scadenza",
   "No favorite models": "Nessun modello preferito",
   "No files were dropped": "Nessun file è stato rilasciato",
@@ -717,6 +719,7 @@
   "Unsupported file type: {{fileName}}": "Tipo di file non supportato: {{fileName}}",
   "Untitled": "Senza titolo",
   "Update Available": "Aggiornamento disponibile",
+  "Upgrade": "Fai l'upgrade",
   "Upload failed: {{error}}": "Caricamento fallito: {{error}}",
   "Upload Image": "Carica immagine",
   "Upload your first document to get started": "Carica il tuo primo documento per iniziare",
@@ -766,6 +769,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Hai delle impostazioni non salvate. Sei sicuro di voler uscire?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Il tuo abbonamento ChatboxAI include già l'accesso ai modelli di vari provider. Non è necessario cambiare provider - puoi selezionare direttamente diversi modelli all'interno di ChatboxAI. Il passaggio da ChatboxAI ad altri provider richiederà le rispettive chiavi API. <button>Torna a ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "La tua licenza attuale (Chatbox AI Lite) non supporta il modello {{model}}. Per utilizzare questo modello, per favore <OpenMorePlanButton>aggiorna</OpenMorePlanButton> a Chatbox AI Pro o a un pacchetto di livello superiore. In alternativa, puoi passare a un modello diverso <OpenSettingButton>accedendo alle impostazioni</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Il tuo piano attuale non supporta l'elaborazione avanzata dei file. Aggiorna il piano per ottenere funzionalità di elaborazione file migliorate.",
   "Your HTML content has been published. You can access it via the link below.": "I tuoi contenuti HTML sono stati pubblicati. Puoi accedervi tramite il link qui sotto.",
   "Your license has expired.": "La tua licenza è scaduta.",
   "Your license has expired. Please check your subscription or purchase a new one.": "La tua licenza è scaduta. Per favore, controlla il tuo abbonamento o acquistane uno nuovo.",
