--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Webページを読み込んでいます...",
   "Loading...": "読み込み中...",
   "Local (stdio)": "ローカル (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "ローカルファイル処理に失敗しました。プランをアップグレードすることで、Chatbox AIの高度なファイル処理機能を利用できます。",
   "Local Mode": "ローカルモード",
   "Log in to your Chatbox account": "Chatboxアカウントにログイン",
   "Log out": "ログアウト",
@@ -454,6 +455,7 @@
   "No content available": "コンテンツなし",
   "No documents yet": "まだドキュメントがありません",
   "No eligible models available": "利用可能なモデルがありません",
+  "No Expansion Pack": "拡張パックなし",
   "No expiration": "期限なし",
   "No favorite models": "お気に入りモデルなし",
   "No files were dropped": "ファイルがドロップされませんでした",
@@ -720,6 +722,7 @@
   "Unsupported file type: {{fileName}}": "サポートされていないファイル形式: {{fileName}}",
   "Untitled": "無題",
   "Update Available": "更新が利用可能",
+  "Upgrade": "アップグレード",
   "Upload failed: {{error}}": "アップロードに失敗しました: {{error}}",
   "Upload Image": "画像をアップロード",
   "Upload your first document to get started": "まずは最初のドキュメントをアップロードしてください",
@@ -769,6 +772,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "未保存の設定があります。本当に移動しますか？",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "あなたのChatboxAIサブスクリプションには、さまざまなプロバイダーのモデルへのアクセスがすでに含まれています。プロバイダーを切り替える必要はありません。ChatboxAI内で直接異なるモデルを選択できます。ChatboxAIから他のプロバイダーに切り替えると、それぞれのAPIキーが必要になります。<button>ChatboxAIに戻る</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "あなたの現在のライセンス（Chatbox AI Lite）は{{model}}モデルをサポートしていません。このモデルを使用するには、<OpenMorePlanButton>アップグレード</OpenMorePlanButton>してChatbox AI Proまたはより高いティアのパッケージにアップグレードしてください。または、<OpenSettingButton>設定にアクセス</OpenSettingButton>して別のモデルに切り替えることもできます。",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "現在のプランでは高度なファイル処理はサポートされていません。強化されたファイル処理機能を利用するには、プランをアップグレードしてください。",
   "Your HTML content has been published. You can access it via the link below.": "HTMLコンテンツが公開されました。以下のリンクからアクセスできます。",
   "Your license has expired.": "ライセンスの有効期限が切れました。",
   "Your license has expired. Please check your subscription or purchase a new one.": "ライセンスが期限切れです。サブスクリプションを確認するか、新しいものを購入してください。",
