--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "웹 페이지를 로드하는 중...",
   "Loading...": "불러오는 중...",
   "Local (stdio)": "로컬 (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "로컬 파일 처리에 실패했습니다. Chatbox AI의 고급 파일 처리 기능을 사용하려면 요금제를 업그레이드하세요.",
   "Local Mode": "로컬 모드",
   "Log in to your Chatbox account": "Chatbox 계정에 로그인하세요",
   "Log out": "로그아웃",
@@ -454,6 +455,7 @@
   "No content available": "사용 가능한 콘텐츠 없음",
   "No documents yet": "아직 문서 없음",
   "No eligible models available": "사용 가능한 적격 모델이 없습니다.",
+  "No Expansion Pack": "확장 팩 없음",
   "No expiration": "만료 없음",
   "No favorite models": "즐겨찾는 모델 없음",
   "No files were dropped": "드롭된 파일이 없습니다.",
@@ -720,6 +722,7 @@
   "Unsupported file type: {{fileName}}": "지원되지 않는 파일 형식: {{fileName}}",
   "Untitled": "제목 없음",
   "Update Available": "업데이트 가능",
+  "Upgrade": "업그레이드",
   "Upload failed: {{error}}": "업로드 실패: {{error}}",
   "Upload Image": "이미지 업로드",
   "Upload your first document to get started": "시작하려면 첫 번째 문서를 업로드하세요",
@@ -769,6 +772,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "저장되지 않은 설정이 있습니다. 나가시겠습니까?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "ChatboxAI 구독에는 이미 다양한 제공업체의 모델에 대한 접근 권한이 포함되어 있습니다. 제공업체를 전환할 필요가 없으며 ChatboxAI 내에서 직접 다른 모델을 선택할 수 있습니다. ChatboxAI에서 다른 제공업체로 전환하려면 해당 API 키가 필요합니다. <button>ChatboxAI로 돌아가기</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "현재 라이선스(Chatbox AI Lite)는 {{model}} 모델을 지원하지 않습니다. 이 모델을 사용하려면 <OpenMorePlanButton>업그레이드</OpenMorePlanButton>하여 Chatbox AI Pro 또는 더 높은 티어 패키지로 전환하세요. 또는 <OpenSettingButton>설정에 접근</OpenSettingButton>하여 다른 모델로 전환할 수 있습니다.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "현재 요금제는 고급 파일 처리를 지원하지 않습니다. 요금제를 업그레이드하여 향상된 파일 처리 기능을 이용하세요.",
   "Your HTML content has been published. You can access it via the link below.": "HTML 콘텐츠가 게시되었습니다. 아래 링크를 통해 접속할 수 있습니다.",
   "Your license has expired.": "라이선스가 만료되었습니다.",
   "Your license has expired. Please check your subscription or purchase a new one.": "라이선스가 만료되었습니다. 구독을 확인하거나 새로운 라이선스를 구매하세요.",
