--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Laster nettside...",
   "Loading...": "Laster inn...",
   "Local (stdio)": "Lokal (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokal filbehandling mislyktes. Du kan oppgradere abonnementet ditt for å bruke Chatbox AIs avanserte filbehandlingsfunksjoner.",
   "Local Mode": "Lokal modus",
   "Log in to your Chatbox account": "Logg inn på Chatbox-kontoen din",
   "Log out": "Logg ut",
@@ -454,6 +455,7 @@
   "No content available": "Ingen tilgjengelig innhold",
   "No documents yet": "Ingen dokumenter ennå",
   "No eligible models available": "Ingen kvalifiserte modeller tilgjengelige",
+  "No Expansion Pack": "Ingen utvidelsespakke",
   "No expiration": "Ingen utløpsdato",
   "No favorite models": "Ingen favorittmodeller",
   "No files were dropped": "Ingen filer ble sluppet",
@@ -719,6 +721,7 @@
   "Unsupported file type: {{fileName}}": "Ikke-støttet filtype: {{fileName}}",
   "Untitled": "Uten tittel",
   "Update Available": "Oppdatering tilgjengelig",
+  "Upgrade": "Oppgrader",
   "Upload failed: {{error}}": "Opplasting mislyktes: {{error}}",
   "Upload Image": "Last opp bilde",
   "Upload your first document to get started": "Last opp ditt første dokument for å komme i gang",
@@ -768,6 +771,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Du har ulagrede innstillinger. Er du sikker på at du vil forlate?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Din ChatboxAI-abonnement inkluderer allerede tilgang til modeller fra mange forfattere. Det er ingen grunn til å bytte forfatter - du kan velge andre modeller direkte i ChatboxAI. Bytte fra ChatboxAI til andre forfattere vil kreve deres respektive API-nøkler. <button>Tilbake til ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "Din nåværende lisens (Chatbox AI Lite) støtter ikke {{model}}-modellen. For å bruke denne modellen, vennligst <OpenMorePlanButton>oppgrader</OpenMorePlanButton> til Chatbox AI Pro eller en høyere pakke. Alternativt kan du bytte til en annen modell ved å <OpenSettingButton>gå til innstillingene</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Din nåværende plan støtter ikke avansert filbehandling. Oppgrader planen for å få forbedrede filbehandlingsfunksjoner.",
   "Your HTML content has been published. You can access it via the link below.": "Ditt HTML-innhold er publisert. Du finner det via lenken nedenfor.",
   "Your license has expired.": "Lisensen din har utløpt.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Lisensen din har utløpt. Vennligst sjekk abonnementet ditt eller kjøp en ny.",
