--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -383,6 +383,7 @@
   "Loading webpage...": "Carregando página web...",
   "Loading...": "A carregar...",
   "Local (stdio)": "Local (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "O processamento de ficheiros local falhou. Pode atualizar o seu plano para usar as capacidades avançadas de processamento de ficheiros do Chatbox AI.",
   "Local Mode": "Modo Local",
   "Log in to your Chatbox account": "Iniciar sessão na sua conta Chatbox",
   "Log out": "Terminar sessão",
@@ -453,6 +454,7 @@
   "No content available": "Nenhum conteúdo disponível",
   "No documents yet": "Nenhum documento ainda",
   "No eligible models available": "Nenhum modelo elegível disponível",
+  "No Expansion Pack": "Sem Pacote de Expansão",
   "No expiration": "Sem validade",
   "No favorite models": "Nenhum modelo favorito",
   "No files were dropped": "Nenhum ficheiro foi largado",
@@ -718,6 +720,7 @@
   "Unsupported file type: {{fileName}}": "Tipo de ficheiro não suportado: {{fileName}}",
   "Untitled": "Sem Título",
   "Update Available": "Atualização disponível",
+  "Upgrade": "Atualizar",
   "Upload failed: {{error}}": "Carregamento falhou: {{error}}",
   "Upload Image": "Carregar Imagem",
   "Upload your first document to get started": "Carregue o seu primeiro documento para começar",
@@ -767,6 +770,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Tem definições não guardadas. Tem a certeza que deseja sair?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Sua subscrição ChatboxAI já inclui acesso a modelos de vários fornecedores. Não é necessário mudar de fornecedor - você pode selecionar diferentes modelos diretamente no ChatboxAI. Mudar de ChatboxAI para outros fornecedores exigirá seus respectivos API keys. <button>Voltar para ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "A sua Licença atual (Chatbox AI Lite) não suporta o modelo {{model}}. Para usar este modelo, por favor <OpenMorePlanButton>atualize</OpenMorePlanButton> para Chatbox AI Pro ou um pacote de nível superior. Alternativamente, pode mudar para um modelo diferente através <OpenSettingButton>do acesso às configurações</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "O seu plano atual não suporta o processamento avançado de ficheiros. Atualize o plano para obter capacidades melhoradas de processamento de ficheiros.",
   "Your HTML content has been published. You can access it via the link below.": "O seu conteúdo HTML foi publicado. Pode aceder a ele através do link abaixo.",
   "Your license has expired.": "A sua licença expirou.",
   "Your license has expired. Please check your subscription or purchase a new one.": "A sua licença expirou. Por favor, verifique a sua subscrição ou adquira uma nova.",
