--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Загрузка веб-страницы...",
   "Loading...": "Загрузка...",
   "Local (stdio)": "Локальный (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Не удалось обработать локальный файл. Вы можете обновить свой тарифный план, чтобы использовать расширенные возможности обработки файлов Chatbox AI.",
   "Local Mode": "Локальный режим",
   "Log in to your Chatbox account": "Войдите в свой аккаунт Chatbox",
   "Log out": "Выйти",
@@ -454,6 +455,7 @@
   "No content available": "Нет содержимого",
   "No documents yet": "Пока нет документов",
   "No eligible models available": "Подходящие модели отсутствуют",
+  "No Expansion Pack": "Нет пакета расширений",
   "No expiration": "Без срока действия",
   "No favorite models": "Нет избранных моделей",
   "No files were dropped": "Файлы не были сброшены",
@@ -720,6 +722,7 @@
   "Unsupported file type: {{fileName}}": "Неподдерживаемый тип файла: {{fileName}}",
   "Untitled": "Без названия",
   "Update Available": "Доступно обновление",
+  "Upgrade": "Обновить",
   "Upload failed: {{error}}": "Не удалось загрузить: {{error}}",
   "Upload Image": "Загрузить изображение",
   "Upload your first document to get started": "Загрузите свой первый документ, чтобы начать",
@@ -769,6 +772,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "У вас есть несохраненные настройки. Вы уверены, что хотите уйти?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Ваша подписка ChatboxAI уже включает доступ к моделям от различных поставщиков. Нет необходимости переключаться на другие поставщики - вы можете выбрать разные модели непосредственно в ChatboxAI. Переключение с ChatboxAI на другие поставщики потребует их соответствующих API-ключей. <button>Вернуться в ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "Ваша текущая лицензия (Chatbox AI Lite) не поддерживает модель {{model}}. Чтобы использовать эту модель, пожалуйста, <OpenMorePlanButton>обновитесь</OpenMorePlanButton> до Chatbox AI Pro или пакета более высокого уровня. В качестве альтернативы, вы можете переключиться на другую модель, <OpenSettingButton>перейдя в настройки</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Ваш текущий план не поддерживает расширенную обработку файлов. Обновите план, чтобы получить улучшенные возможности обработки файлов.",
   "Your HTML content has been published. You can access it via the link below.": "Ваш HTML-контент опубликован. Вы можете получить к нему доступ по ссылке ниже.",
   "Your license has expired.": "Ваша лицензия истекла.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Ваша лицензия истекла. Пожалуйста, проверьте вашу подписку или приобретите новую.",
