--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Laddar webbsida...",
   "Loading...": "Laddar...",
   "Local (stdio)": "Lokal (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokal filbearbetning misslyckades. Du kan uppgradera din plan för att använda Chatbox AI:s avancerade filbearbetningsfunktioner.",
   "Local Mode": "Lokalt läge",
   "Log in to your Chatbox account": "Logga in på ditt Chatbox-konto",
   "Log out": "Logga ut",
@@ -454,6 +455,7 @@
   "No content available": "Inget innehåll tillgängligt",
   "No documents yet": "Inga dokument ännu",
   "No eligible models available": "Inga behöriga modeller tillgängliga",
+  "No Expansion Pack": "Inget expansionspaket",
   "No expiration": "Inget utgångsdatum",
   "No favorite models": "Inga favoritmodeller",
   "No files were dropped": "Inga filer släpptes",
@@ -720,6 +722,7 @@
   "Unsupported file type: {{fileName}}": "Filtyp som inte stöds: {{fileName}}",
   "Untitled": "Namnlös",
   "Update Available": "Uppdatering tillgänglig",
+  "Upgrade": "Uppgradera",
   "Upload failed: {{error}}": "Uppladdning misslyckades: {{error}}",
   "Upload Image": "Ladda upp bild",
   "Upload your first document to get started": "Ladda upp ditt första dokument för att komma igång",
@@ -769,6 +772,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Du har olagrade inställningar. Är du säker på att du vill lämna?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Din ChatboxAI-prenumeration inkluderar redan tillgång till modeller från olika leverantörer. Det finns ingen anledning att byta leverantör - du kan direkt välja olika modeller inom ChatboxAI. Att byta från ChatboxAI till andra leverantörer kräver deras respektive API-nycklar. <button>Tillbaka till ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "Din nuvarande licens (Chatbox AI Lite) stöder inte {{model}}-modellen. För att använda denna modell, vänligen <OpenMorePlanButton>uppgradera</OpenMorePlanButton> till Chatbox AI Pro eller ett paket i högre nivå. Alternativt kan du byta till en annan modell genom att <OpenSettingButton>gå till inställningarna</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Din nuvarande plan stöder inte avancerad filbearbetning. Uppgradera planen för att få förbättrade filbearbetningsfunktioner.",
   "Your HTML content has been published. You can access it via the link below.": "Ditt HTML-innehåll har publicerats. Du kan komma åt det via länken nedan.",
   "Your license has expired.": "Din licens har gått ut.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Din licens har gått ut. Vänligen kontrollera din prenumeration eller köp en ny.",
