--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "加载网页中...",
   "Loading...": "加载中...",
   "Local (stdio)": "本地 (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本地文件处理失败。您可以升级您的套餐以使用 Chatbox AI 的高级文件处理功能。",
   "Local Mode": "本地模式",
   "Log in to your Chatbox account": "登录你的 Chatbox 账户",
   "Log out": "退出登录",
@@ -454,6 +455,7 @@
   "No content available": "暂无内容",
   "No documents yet": "暂无文档",
   "No eligible models available": "没有可用的合格模型",
+  "No Expansion Pack": "无扩展包",
   "No expiration": "永不失效",
   "No favorite models": "没有收藏的模型",
   "No files were dropped": "未拖放任何文件",
@@ -730,6 +732,7 @@
   "Unsupported file type: {{fileName}}": "不支持的文件类型：{{fileName}}",
   "Untitled": "未命名",
   "Update Available": "更新可用",
+  "Upgrade": "升级",
   "Upload failed: {{error}}": "上传失败：{{error}}",
   "Upload Image": "上传图片",
   "Upload your first document to get started": "上传您的第一个文档即可开始",
@@ -781,6 +784,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "您有未保存的设置。确定要离开吗？",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "您的 ChatboxAI 订阅已包含来自各大供应商的模型访问权限。您可以直接在 ChatboxAI 中选择不同的模型，无需切换供应商。从 ChatboxAI 切换到其他供应商将需要他们各自的 API 密钥。<button>返回 ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "您当前的 License（Chatbox AI Lite）不支持 {{model}} 模型。要使用此模型，请<OpenMorePlanButton>升级</OpenMorePlanButton>到 Chatbox AI Pro 或更高级别的套餐。或者，您可以通过<OpenSettingButton>访问设置</OpenSettingButton>切换到其他模型。",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "您当前的计划不支持高级文件处理。请升级计划以获得增强的文件处理能力。",
   "Your HTML content has been published. You can access it via the link below.": "您的 HTML 内容已成功发布。您可以通过以下链接访问。",
   "Your license has expired.": "您的许可证已过期。",
   "Your license has expired. Please check your subscription or purchase a new one.": "您的 license 已过期。请检查您的订阅或重新购买。",
