--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "加載網頁中...",
   "Loading...": "載入中...",
   "Local (stdio)": "本機 (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本機檔案處理失敗。您可以升級您的方案以使用 Chatbox AI 的進階檔案處理功能。",
   "Local Mode": "本地模式",
   "Log in to your Chatbox account": "登入您的 Chatbox 帳戶",
   "Log out": "登出",
@@ -454,6 +455,7 @@
   "No content available": "無內容",
   "No documents yet": "尚未有文件",
   "No eligible models available": "沒有可用的合格模型",
+  "No Expansion Pack": "無擴展包",
   "No expiration": "無期限",
   "No favorite models": "沒有最愛模型",
   "No files were dropped": "沒有檔案被拖放。",
@@ -725,6 +727,7 @@
   "Unsupported file type: {{fileName}}": "不支援的檔案類型：{{fileName}}",
   "Untitled": "未命名",
   "Update Available": "更新可用",
+  "Upgrade": "升級",
   "Upload failed: {{error}}": "上傳失敗：{{error}}",
   "Upload Image": "上傳圖片",
   "Upload your first document to get started": "上傳您的首份文件即可開始",
@@ -774,6 +777,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "您有未保存的設置。確定要離開嗎？",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "您的 ChatboxAI 訂閱已包含來自各大供應商的模型訪問權限。您可以直接在 ChatboxAI 中選擇不同的模型，無需切換供應商。從 ChatboxAI 切換到其他供應商將需要他們各自的 API 金鑰。<button>返回 ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "您當前的 License（Chatbox AI Lite）不支持 {{model}} 模型。要使用此模型，請<OpenMorePlanButton>升級</OpenMorePlanButton>到 Chatbox AI Pro 或更高級別的方案。或者，您可以通過<OpenSettingButton>訪問設置</OpenSettingButton>切換到其他模型。",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "您目前的方案不支援進階檔案處理。請升級方案以獲得更強大的檔案處理功能。",
   "Your HTML content has been published. You can access it via the link below.": "您的 HTML 內容已成功發佈。您可以透過以下連結訪問。",
   "Your license has expired.": "您的許可證已過期。",
   "Your license has expired. Please check your subscription or purchase a new one.": "您的 License 已過期。請檢查您的訂閱或購買新的 License。",
