--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -384,6 +384,7 @@
   "Loading webpage...": "Webseite wird geladen...",
   "Loading...": "Wird geladen...",
   "Local (stdio)": "Lokal (stdio)",
+  "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokale Dateiverarbeitung fehlgeschlagen. Sie können Ihr Abonnement aktualisieren, um die erweiterten Dateiverarbeitungsfunktionen von Chatbox AI zu nutzen.",
   "Local Mode": "Lokaler Modus",
   "Log in to your Chatbox account": "Melden Sie sich bei Ihrem Chatbox-Konto an",
   "Log out": "Abmelden",
@@ -454,6 +455,7 @@
   "No content available": "Keine Inhalte verfügbar",
   "No documents yet": "Noch keine Dokumente",
   "No eligible models available": "Keine geeigneten Modelle verfügbar",
+  "No Expansion Pack": "Kein Erweiterungspaket",
   "No expiration": "Kein Ablauf",
   "No favorite models": "Keine Lieblingsmodelle",
   "No files were dropped": "Keine Dateien abgelegt",
@@ -720,6 +722,7 @@
   "Unsupported file type: {{fileName}}": "Nicht unterstützter Dateityp: {{fileName}}",
   "Untitled": "Unbenannt",
   "Update Available": "Update verfügbar",
+  "Upgrade": "Upgrade",
   "Upload failed: {{error}}": "Upload fehlgeschlagen: {{error}}",
   "Upload Image": "Bild hochladen",
   "Upload your first document to get started": "Laden Sie Ihr erstes Dokument hoch, um loszulegen",
@@ -770,6 +773,7 @@
   "You have unsaved settings. Are you sure you want to leave?": "Sie haben ungespeicherte Einstellungen. Möchten Sie wirklich gehen?",
   "Your ChatboxAI subscription already includes access to models from various providers. There's no need to switch providers - you can select different models directly within ChatboxAI. Switching from ChatboxAI to other providers will require their respective API keys. <button>Back to ChatboxAI</button>": "Ihre ChatboxAI-Abonnement umfasst bereits Zugang zu Modellen von verschiedenen Anbietern. Es ist nicht notwendig, Anbieter zu wechseln - Sie können direkt innerhalb von ChatboxAI unterschiedliche Modelle auswählen. Wechseln von ChatboxAI zu anderen Anbietern erfordert deren jeweilige API-Schlüssel. <button>Zurück zu ChatboxAI</button>",
   "Your current License (Chatbox AI Lite) does not support the {{model}} model. To use this model, please <OpenMorePlanButton>upgrade</OpenMorePlanButton> to Chatbox AI Pro or a higher-tier package. Alternatively, you can switch to a different model by <OpenSettingButton>accessing the settings</OpenSettingButton>.": "Ihre aktuelle Lizenz (Chatbox AI Lite) unterstützt das {{model}}-Modell nicht. Um dieses Modell zu verwenden, <OpenMorePlanButton>aktualisieren</OpenMorePlanButton> Sie auf Chatbox AI Pro oder ein höherwertiges Paket. Alternativ können Sie zu einem anderen Modell wechseln, indem Sie <OpenSettingButton>die Einstellungen aufrufen</OpenSettingButton>.",
+  "Your current plan does not support advanced file processing. Upgrade plan to get enhanced file processing capabilities.": "Ihr aktueller Plan unterstützt keine erweiterte Dateiverarbeitung. Führen Sie ein Upgrade des Plans durch, um erweiterte Dateiverarbeitungsfunktionen zu erhalten.",
   "Your HTML content has been published. You can access it via the link below.": "Ihr HTML-Inhalt wurde veröffentlicht. Sie können über den untenstehenden Link darauf zugreifen.",
   "Your license has expired.": "Ihre Lizenz ist abgelaufen.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Ihre Lizenz ist abgelaufen. Bitte überprüfen Sie Ihr Abonnement oder kaufen Sie ein neues.",
